--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -68,9 +68,9 @@
         android:id="@+id/newUserNextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="29dp"
+        android:text="Tell Us More About You >>>"
         android:layout_below="@+id/newUserConfirmPasswordField"
-        android:layout_marginTop="24dp"
-        android:layout_toEndOf="@+id/makeUsernameField"
-        android:text="Next>" />
+        android:layout_alignStart="@+id/newUserConfirmPasswordField" />
 
 </RelativeLayout>
