Games adding partially implemented

--- a/app/src/main/res/layout/activity_add_games.xml
+++ b/app/src/main/res/layout/activity_add_games.xml
@@ -1,9 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.aegis.linkup.AddGamesActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <AutoCompleteTextView
+        android:id="@+id/autoCompleteTextView"
+        android:layout_width="260dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:hint="Add Games Here"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/listView" />
+
+    <ListView
+        android:layout_width="300dp"
+        android:layout_height="370dp"
+        android:layout_below="@+id/autoCompleteTextView"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/listView" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/listView"
+        android:layout_alignParentEnd="true"
+        android:text="Add" />
+</RelativeLayout>
