--- a/app/src/main/res/layout/activity_add_games.xml
+++ b/app/src/main/res/layout/activity_add_games.xml
@@ -29,4 +29,12 @@
         android:layout_above="@+id/listView"
         android:layout_alignParentEnd="true"
         android:text="Add" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/listView"
+        android:layout_centerHorizontal="true"
+        android:text="Create Account" />
 </RelativeLayout>
