--- a/app/src/main/res/layout/activity_settings_two.xml
+++ b/app/src/main/res/layout/activity_settings_two.xml
@@ -6,4 +6,27 @@
     android:layout_height="match_parent"
     tools:context="com.example.aegis.linkup.SettingsActivityTwo">
 
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="88dp"
+        android:layout_height="48dp"
+        android:text="Group 1"
+        tools:layout_editor_absoluteX="148dp"
+        tools:layout_editor_absoluteY="16dp" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="120dp"
+        android:layout_height="48dp"
+        android:text="Team Rocket"
+        tools:layout_editor_absoluteX="132dp"
+        tools:layout_editor_absoluteY="101dp" />
+
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="110dp"
+        android:layout_height="48dp"
+        android:text="Create New"
+        tools:layout_editor_absoluteX="137dp"
+        tools:layout_editor_absoluteY="433dp" />
 </android.support.constraint.ConstraintLayout>
