--- a/app/src/main/res/layout/activity_new_group.xml
+++ b/app/src/main/res/layout/activity_new_group.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,16 +7,6 @@
     tools:context="com.example.aegis.linkup.NewGroupActivity"
     tools:layout_editor_absoluteY="81dp"
     tools:layout_editor_absoluteX="0dp">
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="186dp"
-        android:layout_height="145dp"
-        app:srcCompat="@android:drawable/ic_input_add"
-        tools:layout_editor_absoluteX="2dp"
-        tools:layout_editor_absoluteY="60dp"
-        android:layout_below="@+id/editText5"
-        android:layout_alignParentStart="true" />
 
     <EditText
         android:id="@+id/editText5"
@@ -45,175 +35,92 @@
     <Button
         android:id="@+id/button8"
         android:layout_width="121dp"
-        android:layout_height="48dp"
+        android:layout_height="60dp"
         android:text="add members"
         tools:layout_editor_absoluteX="2dp"
         tools:layout_editor_absoluteY="270dp"
+        android:layout_marginTop="11dp"
         android:layout_below="@+id/editText6"
-        android:layout_alignParentStart="true" />
+        android:layout_alignEnd="@+id/editText6"
+        android:layout_marginEnd="39dp" />
 
-    <TableLayout
-        android:layout_width="377dp"
-        android:layout_height="177dp"
-        tools:layout_editor_absoluteX="4dp"
-        tools:layout_editor_absoluteY="326dp">
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Meetings"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="20sp"
+        android:layout_marginBottom="200dp" />
 
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:baselineAligned="false">
+    <CheckBox
+        android:id="@+id/checkBox1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Mon"
+        android:layout_marginTop="38dp"
+        android:layout_alignTop="@+id/textView10"
+        android:layout_toStartOf="@+id/checkBox8"></CheckBox>
 
-            <EditText
-                android:id="@+id/editText10"
-                android:layout_width="215dp"
-                android:layout_height="42dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Sun"
-                tools:layout_conversion_absoluteHeight="42dp"
-                tools:layout_conversion_absoluteWidth="215dp"
-                tools:layout_conversion_absoluteX="4dp"
-                tools:layout_conversion_absoluteY="357dp"
-                tools:layout_editor_absoluteX="4dp"
-                tools:layout_editor_absoluteY="357dp" />
+    <CheckBox
+        android:id="@+id/checkBox2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="false"
+        android:text="Tues"
+        android:layout_alignBaseline="@+id/checkBox1"
+        android:layout_alignBottom="@+id/checkBox1"
+        android:layout_toEndOf="@+id/checkBox1"></CheckBox>
 
-            <EditText
-                android:id="@+id/editText16"
-                android:layout_width="215dp"
-                android:layout_height="42dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Mon"
-                tools:layout_conversion_absoluteHeight="42dp"
-                tools:layout_conversion_absoluteWidth="215dp"
-                tools:layout_conversion_absoluteX="4dp"
-                tools:layout_conversion_absoluteY="357dp"
-                tools:layout_editor_absoluteX="4dp"
-                tools:layout_editor_absoluteY="357dp" />
+    <CheckBox
+        android:id="@+id/checkBox3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/checkBox4"
+        android:layout_alignBottom="@+id/checkBox4"
+        android:layout_toEndOf="@+id/checkBox2"
+        android:text="Wed" />
 
-            <EditText
-                android:id="@+id/editText15"
-                android:layout_width="215dp"
-                android:layout_height="42dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Tues"
-                tools:layout_conversion_absoluteHeight="42dp"
-                tools:layout_conversion_absoluteWidth="215dp"
-                tools:layout_conversion_absoluteX="4dp"
-                tools:layout_conversion_absoluteY="357dp"
-                tools:layout_editor_absoluteX="4dp"
-                tools:layout_editor_absoluteY="357dp" />
+    <CheckBox
+        android:id="@+id/checkBox4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Thurs"
+        android:layout_alignBaseline="@+id/checkBox2"
+        android:layout_alignBottom="@+id/checkBox2"
+        android:layout_toEndOf="@+id/checkBox3" />
 
-            <EditText
-                android:id="@+id/editText14"
-                android:layout_width="215dp"
-                android:layout_height="42dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Wed"
-                tools:layout_conversion_absoluteHeight="42dp"
-                tools:layout_conversion_absoluteWidth="215dp"
-                tools:layout_conversion_absoluteX="4dp"
-                tools:layout_conversion_absoluteY="357dp"
-                tools:layout_editor_absoluteX="4dp"
-                tools:layout_editor_absoluteY="357dp" />
+    <CheckBox
+        android:id="@+id/checkBox7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sun"
+        android:layout_below="@+id/checkBox3"
+        android:layout_toEndOf="@+id/checkBox9" />
 
-            <EditText
-                android:id="@+id/editText13"
-                android:layout_width="215dp"
-                android:layout_height="42dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Thurs"
-                tools:layout_conversion_absoluteHeight="42dp"
-                tools:layout_conversion_absoluteWidth="215dp"
-                tools:layout_conversion_absoluteX="4dp"
-                tools:layout_conversion_absoluteY="357dp"
-                tools:layout_editor_absoluteX="4dp"
-                tools:layout_editor_absoluteY="357dp" />
+    <CheckBox
+        android:id="@+id/checkBox9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/checkBox2"
+        android:layout_toEndOf="@+id/checkBox8"
+        android:text="Sat" />
 
-            <EditText
-                android:id="@+id/editText12"
-                android:layout_width="215dp"
-                android:layout_height="42dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Fri"
-                tools:layout_conversion_absoluteHeight="42dp"
-                tools:layout_conversion_absoluteWidth="215dp"
-                tools:layout_conversion_absoluteX="4dp"
-                tools:layout_conversion_absoluteY="357dp"
-                tools:layout_editor_absoluteX="4dp"
-                tools:layout_editor_absoluteY="357dp" />
+    <CheckBox
+        android:id="@+id/checkBox8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/checkBox1"
+        android:layout_toStartOf="@+id/textView10"
+        android:text="Fri" />
 
-            <EditText
-                android:id="@+id/editText11"
-                android:layout_width="215dp"
-                android:layout_height="42dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Sat"
-                tools:layout_conversion_absoluteHeight="42dp"
-                tools:layout_conversion_absoluteWidth="215dp"
-                tools:layout_conversion_absoluteX="4dp"
-                tools:layout_conversion_absoluteY="357dp"
-                tools:layout_editor_absoluteX="4dp"
-                tools:layout_editor_absoluteY="357dp" />
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="Confirm Group" />
 
-        </android.support.constraint.ConstraintLayout>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Switch
-                android:id="@+id/switch7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Switch" />
-
-            <Switch
-                android:id="@+id/switch4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Switch" />
-
-            <Switch
-                android:id="@+id/switch3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Switch" />
-
-            <Switch
-                android:id="@+id/switch5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Switch" />
-
-            <Switch
-                android:id="@+id/switch6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Switch" />
-
-            <Switch
-                android:id="@+id/switch2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Switch" />
-
-            <Switch
-                android:id="@+id/switch1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Switch" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </TableLayout>
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
