--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,7 +12,10 @@
         android:layout_height="48dp"
         android:text="Manage Group Profiles"
         tools:layout_editor_absoluteX="93dp"
-        tools:layout_editor_absoluteY="159dp" />
+        tools:layout_editor_absoluteY="159dp"
+        android:layout_marginTop="23dp"
+        android:layout_below="@+id/button4"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/button4"
@@ -20,5 +23,8 @@
         android:layout_height="48dp"
         android:text="Manage Profile"
         tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="78dp" />
-</android.support.constraint.ConstraintLayout>
+        tools:layout_editor_absoluteY="78dp"
+        android:layout_marginTop="18dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+</RelativeLayout>
