--- a/app/src/main/res/layout/activity_settings_two.xml
+++ b/app/src/main/res/layout/activity_settings_two.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -20,7 +20,10 @@
         android:layout_height="48dp"
         android:text="Team Rocket"
         tools:layout_editor_absoluteX="132dp"
-        tools:layout_editor_absoluteY="101dp" />
+        tools:layout_editor_absoluteY="101dp"
+        android:layout_marginTop="40dp"
+        android:layout_below="@+id/button5"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/button7"
@@ -28,5 +31,8 @@
         android:layout_height="48dp"
         android:text="Create New"
         tools:layout_editor_absoluteX="137dp"
-        tools:layout_editor_absoluteY="433dp" />
-</android.support.constraint.ConstraintLayout>
+        tools:layout_editor_absoluteY="433dp"
+        android:layout_marginTop="45dp"
+        android:layout_below="@+id/button6"
+        android:layout_alignParentStart="true" />
+</RelativeLayout>
