--- a/app/src/main/res/layout/activity_main_profile.xml
+++ b/app/src/main/res/layout/activity_main_profile.xml
@@ -21,9 +21,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="38dp"
+            android:layout_marginStart="37dp"
             android:layout_marginTop="18dp"
-            android:text="Name: Mon"
+            android:text="Name: "
             android:textColor="@android:color/black"
             android:textSize="18sp" />
 
@@ -43,7 +43,7 @@
             android:layout_alignTop="@+id/imageView2"
             android:layout_marginStart="13dp"
             android:layout_toEndOf="@+id/imageView2"
-            android:text="Age: 24"
+            android:text="Age: "
             android:textColor="@android:color/black"
             android:textSize="18sp" />
 
@@ -54,9 +54,78 @@
             android:layout_alignStart="@+id/textView11"
             android:layout_below="@+id/textView11"
             android:layout_marginTop="20dp"
-            android:text="TextView"
+            android:text="Location: "
             android:textColor="@android:color/black"
             android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/textView26"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/imageView2"
+            android:layout_below="@+id/imageView2"
+            android:layout_marginTop="14dp"
+            android:text="Description"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/nameField"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/imageView2"
+            android:layout_toEndOf="@+id/NameText"
+            android:text="Mon"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/DescriptionField"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/textView26"
+            android:layout_below="@+id/textView26"
+            android:ems="10"
+            android:inputType="textPersonName" />
+
+        <TextView
+            android:id="@+id/AgeField"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/textView25"
+            android:layout_toEndOf="@+id/textView11"
+            android:text="24"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/locationField"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/textView25"
+            android:layout_toEndOf="@+id/textView25"
+            android:text="Lincoln"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/textView31"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/DescriptionField"
+            android:layout_below="@+id/DescriptionField"
+            android:layout_marginTop="12dp"
+            android:text="Games List"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
+
+        <ListView
+            android:id="@+id/gameList"
+            android:layout_width="300dp"
+            android:layout_height="160dp"
+            android:layout_alignStart="@+id/textView31"
+            android:layout_below="@+id/textView31" />
+
     </RelativeLayout>
 
     <android.support.design.widget.BottomNavigationView
