--- a/app/src/main/res/layout/activity_add_games.xml
+++ b/app/src/main/res/layout/activity_add_games.xml
@@ -31,7 +31,7 @@
         android:text="Add" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/ManageProfileButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/listView"
