--- a/app/src/main/res/layout/activity_main_profile.xml
+++ b/app/src/main/res/layout/activity_main_profile.xml
@@ -79,13 +79,15 @@
             android:textColor="@android:color/black"
             android:textSize="18sp" />
 
-        <EditText
+        <TextView
             android:id="@+id/DescriptionField"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_alignStart="@+id/textView26"
             android:layout_below="@+id/textView26"
             android:ems="10"
+            android:maxLines="2"
+            android:lines="2"
             android:inputType="textPersonName" />
 
         <TextView
