--- a/app/src/main/res/layout/activity_new_group.xml
+++ b/app/src/main/res/layout/activity_new_group.xml
@@ -9,28 +9,17 @@
     tools:layout_editor_absoluteX="0dp">
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/GroupName"
         android:layout_width="215dp"
         android:layout_height="43dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Group Name"
-        tools:layout_editor_absoluteY="16dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        tools:layout_editor_absoluteX="2dp" />
-
-    <EditText
-        android:id="@+id/editText6"
-        android:layout_width="215dp"
-        android:layout_height="43dp"
+        android:layout_alignStart="@+id/button9"
+        android:layout_marginTop="14dp"
         android:ems="10"
+        android:hint="Group Name"
         android:inputType="textPersonName"
-        android:text="Group Members"
         tools:layout_editor_absoluteX="2dp"
-        tools:layout_editor_absoluteY="215dp"
-        android:layout_below="@+id/editText5"
-        android:layout_alignParentStart="true" />
+        tools:layout_editor_absoluteY="16dp" />
 
     <Button
         android:id="@+id/button8"
@@ -39,20 +28,19 @@
         android:text="add members"
         tools:layout_editor_absoluteX="2dp"
         tools:layout_editor_absoluteY="270dp"
-        android:layout_marginTop="11dp"
-        android:layout_below="@+id/editText6"
-        android:layout_alignEnd="@+id/editText6"
-        android:layout_marginEnd="39dp" />
+        android:layout_marginTop="16dp"
+        android:layout_below="@+id/GroupName"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Meetings"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:textSize="20sp"
-        android:layout_marginBottom="200dp" />
+        android:layout_marginBottom="119dp"
+        android:layout_above="@+id/button9"
+        android:layout_centerHorizontal="true" />
 
     <CheckBox
         android:id="@+id/checkBox1"
@@ -119,8 +107,26 @@
         android:id="@+id/button9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Confirm Group"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="Confirm Group" />
+        android:layout_alignEnd="@+id/checkBox7"
+        android:layout_marginBottom="21dp" />
+
+    <TextView
+        android:id="@+id/textView39"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/GroupName"
+        android:layout_marginBottom="11dp"
+        android:layout_toStartOf="@+id/GroupName"
+        android:text="Group Name"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
+
+    <ListView
+        android:layout_width="300dp"
+        android:layout_height="150dp"
+        android:layout_below="@+id/button8"
+        android:layout_alignEnd="@+id/GroupName" />
 
 </RelativeLayout>
