--- a/app/src/main/res/layout/activity_new_user_two.xml
+++ b/app/src/main/res/layout/activity_new_user_two.xml
@@ -105,6 +105,6 @@
         android:layout_below="@+id/textView6"
         android:ems="10"
         android:hint="Enter Your Age"
-        android:inputType="textPersonName" />
+        android:inputType="number" />
 
 </RelativeLayout>
