--- a/app/src/main/res/layout/activity_manage_people.xml
+++ b/app/src/main/res/layout/activity_manage_people.xml
@@ -7,6 +7,7 @@
     tools:context="com.example.aegis.linkup.ManagePeople">
 
     <ListView
+        android:id="@+id/listview1"
         android:layout_width="368dp"
         android:layout_height="495dp"
         tools:layout_editor_absoluteX="0dp"
