--- a/app/src/main/res/layout/activity_other_profile.xml
+++ b/app/src/main/res/layout/activity_other_profile.xml
@@ -141,10 +141,10 @@
             android:id="@+id/BackToProfileButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/imageView2"
-            android:layout_alignTop="@+id/AddToGroupButton"
-            android:layout_marginEnd="11dp"
-            android:text="Back to Profile" />
+            android:text="Back to Profile"
+            android:layout_alignBaseline="@+id/AddToGroupButton"
+            android:layout_alignBottom="@+id/AddToGroupButton"
+            android:layout_alignEnd="@+id/imageView2" />
 
     </RelativeLayout>
 
